tests/Houtamelo.Spire.Analyzers.Tests/SPIRE002/cases/Detect_PartialStruct_BothPartsFieldless.cs
//@ should_fail
// Ensure that SPIRE002 IS triggered when [EnforceInitialization] is applied to a partial struct and neither partial declaration contains any instance fields.
[EnforceInitialization] //~ ERROR
public partial struct FieldlessPartial { }

public partial struct FieldlessPartial
{
    public void DoNothing() { }
}
